--- a/src/skins/BlueRectangleWithRoundCornersSkin.mxml
+++ b/src/skins/BlueRectangleWithRoundCornersSkin.mxml
@@ -5,6 +5,12 @@
 	<fx:Metadata>
 		[HostComponent("spark.components.SkinnableContainer")]
 	</fx:Metadata>
+	<fx:Script>
+		<![CDATA[
+			public var forCompiler:BlueBox;
+		]]>
+	</fx:Script>
+	
 	<fx:Declarations>
 		<styles:GraphicsLib id="graphicsLib"/>
 	</fx:Declarations>
@@ -15,20 +21,16 @@
 		<s:State name="normal" />
 	</s:states>
 	
-		<s:Rect top="20" bottom="20" left="20" right="20" radiusX="10" radiusY="10">
-			<s:fill>
-				<s:LinearGradient rotation="90">
-					<s:GradientEntry color="#8ccbf9"/>
-					<s:GradientEntry color="#8ccbf9"/>
-				</s:LinearGradient>
-			</s:fill>
-		</s:Rect>
+	<s:Rect width="100%" height="100%" radiusX="6" radiusY="6">
+		<s:fill>
+			<s:LinearGradient>
+				<s:GradientEntry color="#8ccbf9"/>
+				<s:GradientEntry color="#7bbae8"/>
+			</s:LinearGradient>
+		</s:fill>
+	</s:Rect>
 	
-
-	
-	<s:Image id="teaserImage" x="5" y="5" maxHeight="150"/><!-- click="onTeaserImageClick()"/>-->
-	
-	<s:Group id="contentGroup" horizontalCenter="0" top="20"/>
+	<s:Group id="contentGroup"/>
 	
 	<!-- SkinParts
 	name=contentGroup, type=spark.components.Group, required=false
