--- a/src/views/singlePhoto/RemoveFromSetView.mxml
+++ b/src/views/singlePhoto/RemoveFromSetView.mxml
@@ -22,7 +22,7 @@
 			
 			import spark.components.supportClasses.ViewReturnObject;
 			
-			import statics.IconFactory;
+			import factories.IconFactory;
 			import statics.Service;
 			
 			[Bindable]public var forCompiler:RemoveFromSetView;
@@ -77,7 +77,7 @@
 									 />
 	
 		<s:VGroup width="100%" height="100%" paddingBottom="20" paddingLeft="20" paddingRight="20" paddingTop="20">
-			<s:SkinnableContainer width="100%" skinClass="skins.GreyBoxRoundCornersSkin">
+			<s:SkinnableContainer width="100%" skinClass="skins.BlueRectangleWithRoundCornersSkin">
 				
 				<s:VGroup includeIn="askState" paddingBottom="20" paddingLeft="20" paddingRight="20" paddingTop="20">
 					<s:Label text="Do you want to remove" color="#ffffff"/>
