--- a/src/views/singlePhoto/SaveSinglePhotoView.mxml
+++ b/src/views/singlePhoto/SaveSinglePhotoView.mxml
@@ -4,7 +4,7 @@
 		creationComplete="init()" xmlns:components="components.*">
 	<fx:Script>
 		<![CDATA[
-			import statics.IconFactory;
+			import factories.IconFactory;
 		]]>
 	</fx:Script>
 	<fx:Declarations>
@@ -244,7 +244,7 @@
 <!--displaySizesState-->
 	
 		<s:VGroup width="100%" height="100%" paddingBottom="20" paddingLeft="20" paddingRight="20" paddingTop="20" includeIn="displaySizesState">
-			<s:SkinnableContainer skinClass="skins.GreyBoxRoundCornersSkin" contentBackgroundAlpha="0" width="{_containerWidth}">
+			<s:SkinnableContainer skinClass="skins.BlueRectangleWithRoundCornersSkin" contentBackgroundAlpha="0" width="{_containerWidth}">
 				
 				<s:VGroup width="100%" paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20">
 					<s:TextArea selectable="false" editable="false" borderVisible="false" contentBackgroundAlpha="0" width="{_contentWidth}" color="#ffffff">
