--- a/src/views/singleSet/SingleSetAddMeta.mxml
+++ b/src/views/singleSet/SingleSetAddMeta.mxml
@@ -106,6 +106,14 @@
 				currentState = "resultState";
 				_resultTitle = _newTitle;
 				_resultDescription = _newDescription;
+				_setVO.title = _newTitle;
+				_setVO.description = _newDescription;
+			}
+			
+			override public function createReturnObject():Object
+			{
+				
+				return _setVO;
 			}
 
 			/*
