--- a/src/views/upload/BatchUploadView.mxml
+++ b/src/views/upload/BatchUploadView.mxml
@@ -259,9 +259,9 @@
 	
 		
 		<s:List id="photoList" width="100%" height="100%" dataProvider="{_batchUploadAC}"  useVirtualLayout="false"
-				itemRenderer="ItemRenderers.BatchUploadItemRenderer" contentBackgroundColor="#58595b">
+				itemRenderer="ItemRenderers.BatchUploadItemRenderer" contentBackgroundColor="#58595b" >
 			<s:layout >
-				<s:TileLayout paddingTop="10" paddingLeft="10" paddingRight="10" paddingBottom="10" requestedColumnCount="2"/>
+				<s:TileLayout paddingTop="10" paddingLeft="10" paddingRight="10" paddingBottom="10" horizontalGap="10" columnAlign="justifyUsingWidth"/>
 			</s:layout>
 		</s:List>
 		<components:UploadDetailsDisplay title="{_title}" description="{_description}" tags="{_tags}" set="{_setTitle}" privacy="{_visibility}"/>
